<resources>
    <string name="app_name">IFSC-Eventos</string>
    <string name="logo_ifsc">Logo ifsc</string>
    <string name="digite_seu_email">Digite seu Email:</string>
    <string name="digite_sua_senha">Digite sua senha:</string>
    <string name="confirme_a_sua_senha">Confirme a sua senha:</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="digite_a_sua_senha">Digite a sua senha:</string>
    <string name="cadastrar_me">Cadastrar-me</string>
    <string name="j_registrado_efetue_login">Já registrado, efetue Login</string>
    <string name="cadastre_se">cadastre-se</string>
    <string name="ifsc_eventos">IFSC Eventos</string>
    <string name="container">container</string>
    <string name="cadastre_se_aluno">Cadastre-se aluno</string>
    <string name="cadastre_se_tecnico_ou_professor">Cadastre-se Técnico ou Professor</string>
    <string name="matr_cula">Matrícula</string>
    <string name="curso">Curso:</string>
    <string name="telefone">Telefone</string>
</resources>